--- a/popup.html
+++ b/popup.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <style>
-        body {
-            width: 100px;
-        }
+      body {
+        width: 100px;
+      }
     </style>
-</head>
+  </head>
 
-<body>
-    <button id="black">背景を黒にする!</button>
-    <button id="red">背景を赤にする!</button>
+  <body>
+    <button id="button">起動!</button>
     <script src="popup.js"></script>
-</body>
-
+  </body>
 </html>
